# StudentAssistant

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
backend/: backend.py  config.py
backend/api/: api.py  mcp_client.py
backend/api/agents/RAG/: rag_agent.py  vector_store.py
backend/api/agents/assistant/: assistant_agent.py  summarize_agent.py  task_executor.py  task_planner.py
backend/api/data/: query_message.py  query_response.py
backend/core/: file_ingestor.py  mcp_client.py  mcp_server.py  models_provider.py  validation_methods.py
backend/core/agents/: assistant_agent.py  base_agent.py  exam_question_agent.py  web_search_agent.py
backend/core/agents/RAG/: rag_agent.py  vector_store.py
backend/core/agents/assistant/: assistant_agent.py  decision_agent.py  summarize_agent.py  task_planner.py
backend/mcp/: mcp_server.py
backend/mcp/agents/: exam_question_agent.py  web_search_agent.py
components/: models_provider.py  validation_methods.py
components/agents/: assistant_agent.py  web_search_agent.py
components/agents/RAG/: rag_agent.py  vector_store.py
core/agents/: exam_question_agent.py
frontend/: app.py
storage/vector_db/: .gitignore
