[project]
name = "studentassistant"
version = "0.1.0"
description = "Multi-agent assistant for answering student's question capable of creating exam-style questions and answers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.95.0",
    "ipython>=8.36.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.16",
    "langchain-unstructured>=0.1.6",
    "langgraph>=0.4.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pypdf>=5.5.0",
    "python-pptx>=1.0.2",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
    "unstructured>=0.17.2",
    "wikipedia>=1.4.0",
]
